tdf#157448: ignore FILE_ATTRIBUTE_READONLY when FILE_ATTRIBUTE_DIRECTORY is set

Change-Id: I3fbcf15924b30e2c7fe5501e706cdaf32921e103
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157263
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>